# Langchain_Tutorial

./: .gitignore  load_envs.ipynb  main.py  pyproject.toml
CH-1/: claude.md  llm_call.ipynb  llm_call_chatgpt.ipynb  llm_call_claude.ipynb
CH_1/: lc_llm_chatgpt.ipynb  lc_llm_claude.ipynb  lc_llm_claude_prompts.ipynb  lc_llm_claude_rag.ipynb  lc_llm_claude_sys_msg.ipynb  lc_llm_claude_txt.ipynb
langchain_tutorial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
