[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
]
